content/kapacitor/v0.1/tick/group_by_node.md
---
title: GroupByNode
note: Auto generated by tickdoc

menu:
  kapacitor_01:
    name: Group By
    identifier: group_by
    weight: 70
    parent: tick
---

A [GroupByNode](/docs/kapacitor/v0.1/tick/group_by_node.html) will group the incoming data. 
Each group is then processed independently for the rest of the pipeline. 
Only tags that are dimensions in the grouping will be preserved; 
all other tags are dropped. 

Example: 


```javascript
    stream
        .groupBy('service', 'datacenter')
        ...
```

The above example groups the data along two dimensions `service` and `datacenter`. 
Groups are dynamically created as new data arrives and each group is processed 
independently. 


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node. They do not modify the calling node.

### Alert

Create an alert node, which can trigger alerts. 


```javascript
node.alert()
```

Returns: [AlertNode](/docs/kapacitor/v0.1/tick/alert_node.html)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node.derivative(field string)
```

Returns: [DerivativeNode](/docs/kapacitor/v0.1/tick/derivative_node.html)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given 
and results of previous expressions are made available to later expressions. 


```javascript
node.eval(expressions ...tick.Node)
```

Returns: [EvalNode](/docs/kapacitor/v0.1/tick/eval_node.html)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    .groupBy(*)
```



```javascript
node.groupBy(tag ...interface{})
```

Returns: [GroupByNode](/docs/kapacitor/v0.1/tick/group_by_node.html)


### HttpOut

Create an http output node that caches the most recent data it has received. 
The cached data is available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example if the task endpoint is at &#34;/api/v1/task/&lt;task_name&gt;&#34; and endpoint is 
&#34;top10&#34;, then the data can be requested from &#34;/api/v1/task/&lt;task_name&gt;/top10&#34;. 


```javascript
node.httpOut(endpoint string)
```

Returns: [HTTPOutNode](/docs/kapacitor/v0.1/tick/http_out_node.html)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node.influxDBOut()
```

Returns: [InfluxDBOutNode](/docs/kapacitor/v0.1/tick/influx_d_b_out_node.html)


### Join

Join this node with other nodes. The data is joined on timestamp. 


```javascript
node.join(others ...Node)
```

Returns: [JoinNode](/docs/kapacitor/v0.1/tick/join_node.html)


### MapReduce

Perform a map-reduce operation on the data. 
The built-in functions under `influxql` provide the 
selection,aggregation, and transformation functions 
from the InfluxQL language. 

MapReduce may be applied to either a batch or a stream edge. 
In the case of a batch each batch is passed to the mapper idependently. 
In the case of a stream all incoming data points that have 
the exact same time are combined into a batch and sent to the mapper. 


```javascript
node.mapReduce(mr MapReduceInfo)
```

Returns: [ReduceNode](/docs/kapacitor/v0.1/tick/reduce_node.html)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node.sample(rate interface{})
```

Returns: [SampleNode](/docs/kapacitor/v0.1/tick/sample_node.html)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node.union(node ...Node)
```

Returns: [UnionNode](/docs/kapacitor/v0.1/tick/union_node.html)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node.where(expression tick.Node)
```

Returns: [WhereNode](/docs/kapacitor/v0.1/tick/where_node.html)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node.window()
```

Returns: [WindowNode](/docs/kapacitor/v0.1/tick/window_node.html)

